# spoticord

./: .env.example  Cargo.toml  Dockerfile  MIGRATION.md  README.md  publish.bat
spoticord_config/src/: env.rs  lib.rs
spoticord_session/: Cargo.toml
spoticord_session/src/: error.rs  lib.rs  manager.rs
spoticord_stats/: Cargo.toml
spoticord_stats/src/: lib.rs
spoticord_storage/: Cargo.toml
spoticord_storage/src/: lib.rs
spoticord_web/: Cargo.toml
spoticord_web/src/: lib.rs
src/: bot.rs  main.rs
src/commands/core/: link.rs  rename.rs  unlink.rs
src/commands/debug/: token.rs
src/commands/music/: clear.rs  join.rs  mod.rs  queue.rs  skip.rs
