[package]
name = "spoticord_session"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spoticord_config = { path = "../spoticord_config" }
spoticord_storage = { path = "../spoticord_storage" }
spoticord_player = { path = "../spoticord_player" }
spoticord_utils = { path = "../spoticord_utils" }

tokio = { version = "1.41.1", features = ["full"] }
librespot = { git = "https://github.com/SpoticordMusic/librespot.git", default-features = false }
serenity = "0.12.2"
songbird = { version = "0.4.4", features = ["simd-json"] }
anyhow = "1.0.93"
log = "0.4.22"
base64 = "0.22.1"
poise = "0.6.1"
thiserror = "2.0.3"
rspotify = { version = "0.13.3", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
