[package]
name = "spoticord_storage"
version.workspace = true
edition = "2021"

[dependencies]
spoticord_config = { path = "../spoticord_config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rspotify = { version = "0.13.3", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
